fixed the stretchy thing

--- a/frontend/myProfile.css
+++ b/frontend/myProfile.css
@@ -167,5 +167,4 @@ img {
 .delete-profile-div {
     display: flex;
     justify-content: center;
-    width: 100vw;
 }
